Regression: Object selection in viewport is not working #104390

Closed
opened 2023-02-07 02:49:39 +01:00 by Pratik Borhade · 11 comments
Member

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.78

Blender Version
Broken: master 8703db393bfb5290777c59ef29b43d485bcfb80e
Worked: 3.4
Caused by b0b9e746fa

Short description of error
Unable to select objects in viewport with Left mouse button

Exact steps for others to reproduce the error

  • Open default scene
  • Click on any object
**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.78 **Blender Version** Broken: master `8703db393bfb5290777c59ef29b43d485bcfb80e` Worked: 3.4 Caused by b0b9e746fa **Short description of error** Unable to select objects in viewport with Left mouse button **Exact steps for others to reproduce the error** - Open default scene - Click on any object
Author
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscriber: @fclem

Added subscriber: @fclem
Author
Member

Caused by b0b9e746fa
@fclem ^

Caused by b0b9e746fa @fclem ^

Added subscriber: @Wovchick

Added subscriber: @Wovchick

Added subscriber: @Renderbicks

Added subscriber: @Renderbicks

Is there anyone of the devs able to solve this bug? https://developer.blender.org/T104008

Is there anyone of the devs able to solve this bug? https://developer.blender.org/T104008
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

In #104390#1484982, @Renderbicks wrote:
Is there anyone of the devs able to solve this bug? https://developer.blender.org/T104008

this is unrelated though, not sure why you drop this here?

> In #104390#1484982, @Renderbicks wrote: > Is there anyone of the devs able to solve this bug? https://developer.blender.org/T104008 this is unrelated though, not sure why you drop this here?

Fixed by 349350b304

Fixed by 349350b30498b4ba8ceb42bc79a06b3168d1e0cb
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-02-07 17:16:14 +01:00

In #104390#1484982, @Renderbicks wrote:
Is there anyone of the devs able to solve this bug? https://developer.blender.org/T104008

this is unrelated though, not sure why you drop this here?

I thought it's maybe a similar issue? But in my bug report it seems to be a different reason because it selects another object but not the one clicked on in the viewport. Sorry for confusion!

> > In #104390#1484982, @Renderbicks wrote: > > Is there anyone of the devs able to solve this bug? https://developer.blender.org/T104008 > > > this is unrelated though, not sure why you drop this here? I thought it's maybe a similar issue? But in my bug report it seems to be a different reason because it selects another object but not the one clicked on in the viewport. Sorry for confusion!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104390
No description provided.