Fix T104390: Regression: Object selection in viewport is not working

Caused by alignment difference between C and C++. Asan caught the issue
on startup.

Removing the unused view matrix storage copy avoids this problem.